--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>My App</title>
-<link rel="stylesheet" type="text/css" href="/stylesheet.css">
+  <link rel="stylesheet" type="text/css" href="/squashlog.css">
 </head>
 <body>
 
