First steps of ux

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-  <title>My App</title>
+  <title>SquashLog</title>
   <link rel="stylesheet" type="text/css" href="/css/app-bundle.css">
+  <link href='https://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
